syntax = "proto3";

option go_package = "proto/user";

package user;

// User list
message UserListReq {
    string name = 1;
    string role = 2;
}
message UserListRes {
   repeated User Users = 1;
}

// User store
message UserStoreReq {
    string name = 1;
    string email = 2;
    string password = 3;
    string role = 4;
}
message UserStoreRes {
}

// User detail
message UserDetailReq {
    int64 id = 1;
}
message UserDetailRes {
    User User = 1;
}

// User update
message UserUpdateReq {
    int64 id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string role = 5;
}
message UserUpdateRes {
}

// User delete
message UserDeleteReq {
    int64 id = 1;
}
message UserDeleteRes {
}

// ping
message PingReq {
}
message PingRes {
    string message = 1;
}
// user
message User {
    int64 id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string role = 5;
    string created_at = 6;
    string updated_at = 7;
}

// user login
message UserLoginReq {
    string email = 1;
    string password = 2;
}
message UserLoginRes {
    User User = 1;
}

service UserService {
    rpc Ping (PingReq) returns (PingRes) {}
    rpc List(UserListReq) returns (UserListRes) {}
    rpc Store(UserStoreReq) returns (UserStoreRes) {}
    rpc Detail(UserDetailReq) returns (UserDetailRes) {}
    rpc Update(UserUpdateReq) returns (UserUpdateRes) {}
    rpc Delete(UserDeleteReq) returns (UserDeleteRes) {}
    rpc Login(UserLoginReq) returns (UserLoginRes) {}
}
